# livekit-agent-python

./: .env.example  .gitignore  Dockerfile.sample  README.md  agent.py  app.py  pyproject.toml  requirements.txt
plugins/custom/: __init__.py  llm.py  log.py  models.py  stt.py  tts.py  utils.py
templates/: index.html
